# Code-Compiler-and-Executer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  setup.sh
admin_client/: CMakeLists.txt
admin_client/include/: admin_client.h  admin_commands.h
admin_client/src/: admin_client.cpp  admin_commands.cpp
client_python/: client.py  communication.py  file_transfer.py  requirements.txt
client_unix/: CMakeLists.txt
client_unix/include/: client.h  communication.h
client_unix/src/: client.cpp  file_transfer.cpp
common/: CMakeLists.txt  messages.h  protocol.h  utils.h
docs/: API.md
docs/html/: README_8md.html  admin__client_8cpp.html  admin__client_8cpp_source.html  annotated.html  classAdminClient.html  classRegularClient.html  classclient_1_1CrossPlatformClient.html  classes.html  client_8cpp.html  client_8cpp_source.html  client_8py.html  client_8py_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  menudata.js  namespaceclient.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  server_8c.html  server_8c_source.html  structclient__info__t.html
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+8 more)
scripts/: .clang-format  .editorconfig  .gitignore  README.md  build.sh
scripts/docs/: BUILD.md
server/: CMakeLists.txt
server/include/: common.h  compiler.h  server.h
server/src/: admin_handler.c  client_handler.c  compiler_service.c  file_manager.c  queue_manager.c  server.c
src/: CMakeLists.txt  admin_client.cpp  client.cpp  client.py  server.c
